O primeiro audio player com seekbar já está funcionando

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,11 @@
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@style/Theme.PdfReader"
-            tools:targetApi="31"
-            android:usesCleartextTraffic="true">
+            android:usesCleartextTraffic="true"
+            tools:targetApi="31">
+        <activity
+                android:name=".PdfReader"
+                android:exported="false"/>
         <activity
                 android:name=".MainActivity"
                 android:exported="true">
